infrastructure/dashboard-registry/httpsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry-httpsroute
  namespace: registry
  labels:
    gateway: traefik-gateway
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: websecure
    namespace: traefik
  hostnames:
  - registry.kube.slc.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: dashboard-registry-docker-registry-ui-registry-server
      port: 5000
